[package]
name = "methylenix"
version = "0.0.1"
authors = [ "PG_MANA <pg_mana@taprix.org>" ]
description = "The OS written in Rust"
keywords = ["os","operating-system", "kernel", "seccamp", "security-camp"]
categories = ["os", "operating-system"]
license = "Apache-2.0"

[lib]
crate-type = ["staticlib"]
