[package]
name = "methylenix"
version = "0.2.4"
authors = ["PG_MANA <pg_mana@taprix.org>"]
description = "The OS written in Rust"
keywords = ["os", "operating-system", "kernel", "seccamp", "security-camp"]
categories = ["os"]
license = "Apache-2.0"
edition = "2024"

[profile.release]
#lto = true
#opt-level = 1
debug = true
strip = "symbols"
